(lang dune 3.8)

(using melange 0.1)

(name melange-opam-template)

(license "MIT")

(maintainers "Rinat Musin")

(authors "Rinat Musin")

(homepage https://github.com/RinatM01/country-select)

(bug_reports https://github.com/RinatM01/country-select/issues)

(package
 (allow_empty)
 (name melange-opam-template)
 (synopsis "Country Select implementation using ReasonReact")
 (description "A web app that showcases component that let's you select countries from a given list."))
