opam-version: "2.0"
synopsis: "Country Select implementation using ReasonReact"
description: "A web app that showcases component that let's you select countries from a given list."
maintainer: ["Rinat Musin"]
authors: ["Rinat Musin"]
license: "MIT"
homepage: "https://github.com/RinatM01/country-select"
bug-reports: "https://github.com/RinatM01/country-select/issues"
depends: [
  "ocaml"
  "reason" {>= "3.10.0"}
  "dune" {>= "3.9"}
  "melange" {>= "2.0.0"}
  "reason-react" {>= "0.13.0"}
  "reason-react-ppx"
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
  "ocamlformat" {>= "0.26.1"}
  "melange-fetch" {>= "0.1.0"}
  "melange-json" {>= "1.0.0"}
]
dev-repo: "git+https://github.com/your/project.git"
